<resources>
    <string name="app_name">Plasma Do</string>


    //Register
    <string name="register_tv_firstName">First Name</string>
    <string name="register_tv_lastName">Last Name</string>
    <string name="register_tv_phone">Phone Number</string>
    <string name="register_tv_age">Age </string>
    <string name="register_tv_password">Password</string>
    <string name="register_tv_repassword"> Confirm Password</string>
    <string name="register_tv_district">Enter District</string>
    <string name="register_tv_landmark">Enter Landmark</string>
    <string name="register_tv_sp_bg">Select Blood Group</string>
    <string name="register_tv_sp_gender">Select Gender</string>
    <string name="register_tv_city">Enter City</string>
    <string name="register_tv_pincode">Enter Pin Code</string>
    <string name="register_btn_createAccount">Create Account</string>
    <string name="register_tv_email">Enter Email</string>
    <string name="tandc">&lt;a href="https://sites.google.com/view/plasmadoapp/home/terms_and_conditions?authuser=0">Terms &amp; Conditions&lt;/a></string>
    <string name="pp">&lt;a href="https://sites.google.com/view/plasmadoapp/home/privacy-policy?authuser=0">Privacy Policy&lt;/a></string>

    <string name="dialog_request">Are you sure you want to Place a Request for Plasma?</string>
    <string name="dialog_call">Are you sure you want to Call and Donate Plasma?</string>


    <string name="sharetext">"*Save Life's of Other by Donating Blood Plasma. Donate it.*\n"</string>
    <string name="sharetext_h">"*दूसरों के जीवन को बचाने के लिए अपने रक्त प्लाज्मा का दान करें। इसे दान करें।*\n"</string>


    <string name="note">We Strongly Recommend You to Consult with medical professional or your Doctor before taking any Decision.\nकोई भी निर्णय लेने से पहले आप मेडिकल प्रोफेशनल या अपने डॉक्टर से सलाह लें।</string>

    <string name="dev">This App is Develop by an IT Student with Strong Intention of Helping Blood Plasma Recipients. This app connects Donors &amp; Recipients.</string>

    <string name="app_update">New Version of App is Available. Please Update Your App to Latest Version.</string>
    <string name="app_block">Due to Invalid Activity your Account has been Restricted. Contact Support to Unblock.</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="email_support">Email Support</string>
    <string name="feedback">Feedback</string>
    <string name="rate_app">Rate App</string>
    <string name="how_to_use_app">How to Use App</string>
    <string name="share_app">Share App</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="request">Request</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="icon">icon</string>
    <string name="contact_support">Contact Support</string>


</resources>