<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/m1"
        android:title="@string/share_app"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mVideo"
        android:title="@string/how_to_use_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/m2"
        android:title="@string/rate_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/m3"
        android:title="@string/feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/m4"
        android:title="@string/email_support"
        app:showAsAction="never" />
    <item
        android:id="@+id/m5"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />
    <item
        android:id="@+id/m6"
        android:title="@string/terms_amp_conditions"
        app:showAsAction="never" />
    <item
        android:id="@+id/m7"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/m8"
        android:title="@string/logout"
        app:showAsAction="never" />


</menu>